--- a/Funky Beach (Act 1)/background2-22.ini
+++ b/Funky Beach (Act 1)/background2-22.ini
@@ -20,6 +20,17 @@ repeatX = true
 alignY=BOTTOM
 speedX=0.32
 
+[2]
+name="watersky"
+depth = 150
+img = "bg4.png"
+repeatX = true
+alignY=BOTTOM
+speedX=0.1
+y=-70
+priority=-100.9
+fragshader="wave.frag"
+
 [water]
 name="water"
 parallaxX = 0
@@ -27,7 +38,7 @@ depth = 150
 img = "bg2.png"
 alignY=BOTTOM
 fragshader="wave.frag"
-priority=-100
+priority=-100.8
 
 [sun]
 name="sun"
