--- a/Downpour Sector (Act 1)/npc-752.ini
+++ b/Downpour Sector (Act 1)/npc-752.ini
@@ -1,5 +1,6 @@
 [npc]
 image="npc-752.png"
-physical-height=64
-physical-width=64
-gfx-height=64
+physical-width=24
+physical-height=24
+gfx-width=24
+gfx-height=24
