--- a/Downpour Sector (Act 1)/npc.tileset.ini
+++ b/Downpour Sector (Act 1)/npc.tileset.ini
@@ -1,7 +1,7 @@
 [tileset]
 rows=3
 cols=3
-name=npcs
+name=npc
 type=2
 
 [item-0-0]
@@ -9,6 +9,3 @@ id=751
 
 [item-1-0]
 id=752
-
-[item-2-0]
-id=753
