--- a/Dragon Island (Act 2)/background2-52.ini
+++ b/Dragon Island (Act 2)/background2-52.ini
@@ -8,14 +8,24 @@ fill-color = black
 ; Добавлять слои здесь, например:
 [0]
 image="bg0.png"
-depth=300
+depth=200
 repeatX=true
-priority=-101
+alignY=BOTTOM
+
+[2]
+image="bg2.png"
+depth=150
+repeatX=true
+alignY=BOTTOM
+
+[3]
+image="bg3.png"
+depth=100
+repeatX=true
+alignY=BOTTOM
 
 [1]
 image="bg1.png"
-depth=100
-frames=3
-alignY=BOTTOM
+depth=75
 repeatX=true
-priority=-100
+alignY=BOTTOM
