--- a/Chuck Park (Act 1)/background2-12.ini
+++ b/Chuck Park (Act 1)/background2-12.ini
@@ -2,7 +2,7 @@
 ; Имя, которое отобразится в редакторе
 name = "SMW Trees"
 ; Цвет заливки фона
-fill-color = #F2834B
+fill-color = #F07C65
 
 ; Добавлять слои здесь, например:
 
