--- a/Aurora Garden (Act 1)/background2-43.ini
+++ b/Aurora Garden (Act 1)/background2-43.ini
@@ -1,6 +1,6 @@
 [background2]
 name = "Heaven"
-fill-color = "#000000"
+fill-color = #2090B8
 
 [Layer 1]
 name = "Layer 1"
@@ -8,7 +8,7 @@ depth = 1000
 alignY = BOTTOM
 img = "background2-43 without sea.png"
 repeatX = true
-repeatY = true
+repeatY = false
 speedX = -0.07
 parallaxX = 0.1
 
